PROGRESS BAR IS WORKING!!!! (although i used ai to fix some problems with the updating, SEE COMMENTED SECTION FOR THAT), all of the other programming was done by ME (plus stack overflow and youtube lol)! pause play button also changes too and toggles based on if song is playing or paused

--- a/style.css
+++ b/style.css
@@ -203,6 +203,17 @@ body {
     height: 20px;
 }
 
-#play {
-    background-color: pink;
+.controls {
+    display: flex;
+}
+
+.btnimg {
+    height: 30px;
+}
+
+#timekeeper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
